--- a/src/styles/Logout.css
+++ b/src/styles/Logout.css
@@ -1,25 +1,26 @@
 /* Style pour le bouton de déconnexion */
 .logout-button {
-    background-color: #e74c3c;
-    border: none;
-    color: #fff;
-    padding: 12px 24px;
-    cursor: pointer;
-    border-radius: 30px;
-    font-weight: bold;
-    font-size: 16px;
-    transition: all 0.3s ease;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .logout-button:hover {
-    background-color: #c0392b;
-  }
-  
-  .logout-button:focus {
-    outline: none;
-  }
-  
+  background-color: #e74c3c; /* Couleur de fond par défaut */
+  border: none;
+  color: #fff;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 30px;
+  font-weight: bold;
+  font-size: 16px;
+  transition: all 0.3s ease;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.logout-button:hover {
+  background-color: #c0392b; /* Couleur de fond au survol */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Augmente l'ombre au survol */
+  transform: translateY(-2px); /* Légère élévation au survol */
+}
+
+.logout-button:focus {
+  outline: none;
+}
